Updated recipe items to show all necessary items

--- a/app/src/main/res/layout/activity_recipe_popup.xml
+++ b/app/src/main/res/layout/activity_recipe_popup.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:minWidth="50pt"
     android:minHeight="50pt"
@@ -13,8 +14,9 @@
         android:layout_height="match_parent"
         android:layout_weight="0.03"
         android:orientation="vertical"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp">
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="15dp">
 
         <TextView
             android:id="@+id/mp_recipe_name"
@@ -51,17 +53,33 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_weight="0.5"
+            android:layout_marginLeft="-20dp" />
+
         <TextView
             android:text="Description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/recipe_description_text"
-            android:textSize="18sp"
+            android:id="@+id/recipe_descriptiontitle_text"
+            android:textSize="24sp"
             android:layout_weight="0.03"
             android:layout_below="@+id/recipe_calorie_text"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginTop="15dp" />
+
+        <TextView
+            android:text="TextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/recipe_description_text"
+            android:layout_weight="0.03"
+            android:paddingRight="15dp" />
 
         <Button
             android:text="Select"
@@ -72,6 +90,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
+
     </LinearLayout>
 
     <!--<TableRow-->
