--- a/app/src/main/res/layout/activity_recipe_info.xml
+++ b/app/src/main/res/layout/activity_recipe_info.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:minWidth="50pt"
     android:minHeight="50pt"
@@ -49,6 +48,14 @@
             android:layout_below="@+id/recipe_servings_text"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.03"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="-20dp" />
 
         <TextView
             android:text="Nutrient Info "
@@ -153,15 +160,47 @@
             android:layout_marginTop="15dp"
             android:textStyle="normal|bold" />
 
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:id="@+id/ingredientList"
+            android:nestedScrollingEnabled="true"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp" />
+
         <TextView
-            android:text="Directions"
+            android:text="About this recipe"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/recipe_directionstitle_text"
+            android:layout_weight="0.03"
+            android:textSize="24sp"
+            android:textStyle="normal|bold"
+            android:layout_marginTop="20dp" />
+
+        <TextView
+            android:text="TextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/recipe_directions_text"
             android:layout_weight="0.03"
+            android:layout_marginBottom="20dp" />
+
+        <TextView
+            android:text="Description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/recipe_descriptionTitle_text"
+            android:layout_weight="0.03"
             android:textSize="24sp"
-            android:textStyle="normal|bold"
-            android:layout_marginTop="10dp" />
+            android:textStyle="normal|bold" />
+
+        <TextView
+            android:text="TextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/recipe_description_text"
+            android:layout_weight="0.03" />
 
     </LinearLayout>
 
