--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -33,4 +33,10 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_clear_database"
+        android:orderInCategory="100"
+        android:title="Clear Database"
+        app:showAsAction="never" />
+
 </menu>
