Moved pantry delete button

--- a/app/src/main/res/layout/activity_pantry.xml
+++ b/app/src/main/res/layout/activity_pantry.xml
@@ -48,20 +48,10 @@
         android:listSelector="@android:color/holo_blue_light"/>
 
     <Button
-        android:text="Delete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/button_pantry_delete"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true" />
-
-    <Button
         android:text="Add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button_pantry_add"
-        android:layout_alignParentBottom="true"
-        android:layout_toStartOf="@+id/button_pantry_delete" />
-
+        android:layout_alignParentBottom="true" />
 
 </RelativeLayout>
