--- a/app/src/main/res/layout/activity_calendar_popup.xml
+++ b/app/src/main/res/layout/activity_calendar_popup.xml
@@ -4,7 +4,11 @@
     android:orientation="vertical"
     android:minWidth="50pt"
     android:minHeight="50pt"
-    android:layout_width="350dp">
+    android:layout_width="350dp"
+    android:layout_marginTop="20dp"
+    android:layout_marginRight="20dp"
+    android:layout_marginBottom="20dp"
+    android:layout_marginLeft="20dp">
 
 
     <TextView
