--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -45,12 +45,12 @@
 
         <include
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             layout="@layout/summary_meals"
             android:id="@+id/listView_user_meals"
             android:layout_below="@+id/textView_user_summary"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="17dp" />
+            android:layout_marginTop="17dp"
+            android:layout_height="200dp" />
 
         <Button
             android:text="Edit"
@@ -89,6 +89,31 @@
             android:layout_marginTop="13dp"
             android:layout_below="@+id/textView_user_weight"
             android:layout_alignParentStart="true" />
+
+        <TextView
+            android:text="Fitness Goals:"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView_user_goals"
+            android:textSize="26sp"
+            android:layout_below="@id/listView_user_meals"
+            android:layout_marginTop="-10dp"/>
+
+        <TextView
+            android:text="Goals Here"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView_user_goalList"
+            android:textSize="20sp"
+            android:layout_below="@id/textView_user_goals" />
+
+        <Button
+            android:text="Go to..."
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button_user_goals"
+            android:layout_below="@+id/textView_user_goalList"
+            android:layout_alignParentEnd="true" />
 
     </RelativeLayout>
 </ScrollView>
