--- a/app/src/main/res/layout/activity_recipe_info.xml
+++ b/app/src/main/res/layout/activity_recipe_info.xml
@@ -57,6 +57,13 @@
             android:layout_marginTop="20dp"
             android:layout_marginLeft="-20dp" />
 
+        <Button
+            android:text="Meal is Done"
+            android:layout_width="121dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/mealIsDone"
+            android:onClick="recipeDoneOnClick" />
+
         <TextView
             android:text="Nutrient Info "
             android:layout_width="match_parent"
@@ -113,6 +120,13 @@
             android:layout_below="@+id/recipe_carb_text"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
+
+        <TextView
+            android:text="Meal is Done"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView"
+            android:layout_weight="0.03" />
 
         <TextView
             android:text="Cholesterol(mg): "
