--- a/app/src/main/res/layout/activity_recipes.xml
+++ b/app/src/main/res/layout/activity_recipes.xml
@@ -30,8 +30,9 @@
         android:layout_below="@+id/recipeTitleID"
         android:layout_alignLeft="@+id/recipeTitleID"
         android:layout_alignStart="@+id/recipeTitleID"
-        android:layout_marginLeft="-3dp"
-        android:layout_marginTop="10dp" />
+        android:layout_marginLeft="-30dp"
+        android:layout_marginTop="10dp"
+        android:layout_toStartOf="@+id/toggleButton" />
 
     <ListView
         android:layout_width="match_parent"
@@ -41,16 +42,8 @@
         android:layout_alignParentStart="true"
         android:layout_marginBottom="54dp"
         android:layout_alignParentBottom="true"
-        android:layout_below="@+id/recipeSearchView" />
-
-    <Button
-        android:text="Cancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/recPopCancel_button"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_below="@+id/recipeSearchView"
+        android:listSelector="?android:attr/colorAccent" />
 
     <TextView
         android:text="No results found"
@@ -61,4 +54,44 @@
         android:layout_below="@+id/recipeSearchView"
         android:layout_alignLeft="@+id/recipeTitleID"
         android:layout_alignStart="@+id/recipeTitleID" />
+
+    <ToggleButton
+        android:text="API"
+        android:layout_height="40dp"
+        android:id="@+id/toggleButton"
+        android:textSize="12sp"
+        android:layout_width="50dp"
+        android:textOff="USER"
+        android:textOn="API"
+        android:layout_alignTop="@+id/recipeSearchView"
+        android:layout_toStartOf="@+id/advanced_search_button" />
+
+    <Button
+        android:text="Adv."
+        android:id="@+id/advanced_search_button"
+        android:elevation="0dp"
+        android:layout_height="40dp"
+        android:layout_width="50dp"
+        android:textAllCaps="false"
+        android:layout_alignTop="@+id/toggleButton"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:text="Create"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/create_button"
+        android:textAlignment="center"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+    <Button
+        android:text="Cancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/recPopCancel_button"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true" />
+
 </RelativeLayout>
