--- a/app/src/main/res/layout/activity_upcoming_plans.xml
+++ b/app/src/main/res/layout/activity_upcoming_plans.xml
@@ -41,7 +41,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="11dp"
-        android:layout_below="@+id/textView5" />
+        android:layout_below="@+id/textView5"
+        android:listSelector="?android:attr/colorAccent" />
 
     <TextView
         android:text="Upcoming Plans"
