--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -116,7 +116,7 @@
             android:layout_alignParentEnd="true" />
 
         <Button
-            android:text="View Meal Stats"
+            android:text="Stats"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignTop="@+id/textView_user_height"
